# debug-variavel-py

./: LICENSE  README.md  main.py  pyproject.toml  setup.py
debugsPy.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  top_level.txt
